Fixes: NB#248290 - The keyboard mode status indicator has no spacing to the next status indicator on the left
Bug: NB#248290 - The keyboard mode status indicator has no spacing to the next status indicator on the left
RevBy: TrustMe

--- a/themes/style/statusarea.css
+++ b/themes/style/statusarea.css
@@ -110,10 +110,17 @@ StatusIndicatorAnimationStyle:icon {
 }
 
 StatusIndicatorAnimationStyle#InputMethodStatusIndicator {
-    use-icon-size: true;
+    margin-left: 0.4mm;
     preferred-size: -1 -1;
     minimum-size: -1 -1;
     maximum-size: -1 -1;
+}
+
+StatusIndicatorAnimationStyle#InputMethodStatusIndicatorDisabled {
+    margin-left: 0;
+    preferred-size: 0 -1;
+    minimum-size: 0 -1;
+    maximum-size: 0 -1;
 }
 
 StatusIndicatorLabelStyle {
